<resources>
    <string name="app_name">Project_5_Group_81</string>
    <string name="ru_pizzeria">RU PIZZERIA</string>
    <string name="deluxepizza">DeluxePizza</string>
    <string name="hawaiianpizza">HawaiianPizza</string>
    <string name="pepperonipizza">PepperoniPizza</string>
    <string name="current_order">Current Order</string>
    <string name="price">Price:</string>
    <string name="deluxe_pizza_image">Deluxe Pizza Image</string>
    <string name="priceValue">0.00$</string>
    <string name="add_to_order">Add To Order</string>
    <string name="select_toppings">Select Toppings:</string>
    <string name="pizza_customization">Pizza Customization</string>
    <string name="deluxe_pizza">Deluxe Pizza</string>
    <string name="hawaiian_pizza">Hawaiian Pizza</string>
    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="phone_number">Phone Number</string>
    <string name="price_text">Price:</string>
    <string name="_0_00">0.00$</string>
    <string name="pizza_label">pizza label</string>
    <string name="order_number">order number</string>
    <string name="tax1">tax</string>
    <string name="total1">total</string>
    <string name="place_order">Place Order</string>
    <string name="order">Order #:</string>
    <string name="store_orders">Store Orders</string>
    <string name="order_summary">Order Summary</string>
    <string name="go_back">Go Back</string>
    <string name="remove_order">Remove Order</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="tax_">tax</string>
    <string name="subtotal">subtotal</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="total_">total</string>
    <string name="remove_pizza">Remove Pizza</string>

</resources>